<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="#F6F6F9"
         >

         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"

             app:cardCornerRadius="12dp"
             app:circularflow_radiusInDP="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintHorizontal_weight="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

                 <TextView
                     android:id="@+id/hotel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="19dp"
                     android:text="@string/hotel"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />


                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager"
                     android:layout_width="0dp"
                     android:layout_height="257dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hotel" />

                 <RelativeLayout
                     android:id="@+id/rating_bar"
                     android:layout_width="wrap_content"
                     android:layout_height="29dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/rounded_corners"
                     android:backgroundTint="#FDF4CB"
                     android:gravity="center_vertical"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewPager">

                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="15dp"
                         android:layout_centerVertical="true"
                         android:layout_height="15dp"
                         android:layout_alignParentLeft="true"
                         android:layout_centerInParent="true"
                         android:layout_marginStart="10dp"
                         app:srcCompat="@drawable/star" />

                     <TextView
                         android:id="@+id/rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="1dp"
                         android:layout_marginRight="10dp"
                         android:layout_toRightOf="@+id/imageView2"
                         android:text="@string/mark"
                         android:textColor="#FFA800" />

                 </RelativeLayout>

                 <TextView
                     android:id="@+id/hotel_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:text="@string/holtelName"
                     android:textColor="#000000"
                     android:textSize="22sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

                 <TextView
                     android:id="@+id/maps_link"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:clickable="true"
                     android:text="link"
                     android:textColor="#0D72FF"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hotel_name" />

                 <TextView
                     android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="18dp"
                     android:text="@string/priceInRUB"
                     android:textColor="#000000"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/maps_link" />

                 <TextView
                     android:id="@+id/price_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="44dp"
                     android:layout_marginBottom="18dp"
                     android:text="@string/priceComment"
                     android:textColor="#828796"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/price"
                     app:layout_constraintTop_toBottomOf="@+id/maps_link" />

                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/into_tab_layout"
                     android:layout_width="70dp"
                     android:layout_height="17dp"
                     android:layout_gravity="bottom"

                     android:layout_marginBottom="15dp"
                     android:background="@drawable/rounded_corners"
                     android:backgroundTint="@color/white"
                     app:layout_constraintBottom_toBottomOf="@+id/viewPager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:tabBackground="@drawable/tab_pager_selector"
                     app:tabGravity="center"
                     app:tabIndicatorHeight="0dp" />


             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:cardCornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView">

             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:text="@string/aboutHotel"
                     android:textColor="#000000"
                     android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />

                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/chip_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     app:chipSpacingVertical="0dp"
                     app:chipSpacingHorizontal="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textView9">


                 </com.google.android.material.chip.ChipGroup>

                 <TextView
                     android:id="@+id/hotel_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="16dp"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
                     android:text="description"
                     android:textColor="#E6000000"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/chip_group" />

                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/rounded_corners"
                     android:backgroundTint="#FAFAFB"
                     android:orientation="vertical"
                     android:padding="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hotel_description">

                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="38dp">

                         <ImageView
                             android:id="@+id/comforts"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             app:srcCompat="@drawable/emoji_happy" />

                         <TextView
                             android:id="@+id/tvComforts"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:layout_toRightOf="@id/comforts"
                             android:text="@string/comforts"
                             android:textColor="#2C3035"
                             android:textSize="16dp" />

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
                             android:layout_marginStart="12dp"
                             android:layout_toRightOf="@id/comforts"
                             android:text="@string/comfortsDetails"
                             android:textColor="#828796"
                             android:textSize="14sp" />

                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             app:srcCompat="@drawable/vector_55"

                             />


                     </RelativeLayout>

                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         app:srcCompat="@drawable/vector" />

                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="38dp">

                         <ImageView
                             android:id="@+id/whatAdded"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             app:srcCompat="@drawable/ticksquare" />

                         <TextView
                             android:id="@+id/tvAdded"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:layout_toRightOf="@id/whatAdded"
                             android:text="@string/whatadded"
                             android:textColor="#2C3035"
                             android:textSize="16dp" />

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
                             android:layout_marginStart="12dp"
                             android:layout_toRightOf="@id/whatAdded"
                             android:text="@string/whataddedComment"
                             android:textColor="#828796"
                             android:textSize="14sp" />

                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             app:srcCompat="@drawable/vector_55" />


                     </RelativeLayout>

                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginStart="24dp"
                         app:srcCompat="@drawable/vector" />

                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="38dp">

                         <ImageView
                             android:id="@+id/discomforts"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             app:srcCompat="@drawable/close_square" />

                         <TextView
                             android:id="@+id/tvDiscomforts"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:layout_toRightOf="@id/discomforts"
                             android:text="@string/whatUnAdded"
                             android:textColor="#2C3035"
                             android:textSize="16dp" />

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
                             android:layout_marginStart="12dp"
                             android:layout_toRightOf="@id/discomforts"
                             android:text="@string/comfortsDetails"
                             android:textColor="#828796"
                             android:textSize="14sp" />

                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             app:srcCompat="@drawable/vector_55"

                             />


                     </RelativeLayout>

                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>


         <Button
             android:id="@+id/choose_room_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:backgroundTint="#376DFD"
             android:text="@string/chooseRoom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView2" />







     </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>